2003-04-25  Alan Modra  <amodra@bigpond.net.au>
	    Jakub Jelinek  <jakub@redhat.com>

	* config/rs6000/rs6000.c (rs6000_legitimize_address,
	rs6000_emit_move): Handle -maddr32.
	(rs6000_stack_info): Handle -msafe-stack and -mprofile-kernel.
	(rs6000_emit_prologue, rs6000_emit_epilogue): Handle -msafe-stack.
	(output_function_profiler): Handle -mprofile-kernel.
	* config/rs6000/linux64.h (BI_ARCH_OVERRIDE_OPTIONS,
	MASK_SAFE_STACK, MASK_ADDR32, MASK_PROFILE_KERNEL): Define.
	(TARGET_SAFE_STACK, TARGET_ADDR32, TARGET_PROFILE_KERNEL,
	EXTRA_SUBTARGET_SWITCHES, SUBSUBTARGET_OVERRIDE_OPTIONS): Redefine.
	(PROFILE_HOOK): Don't call output_profile_hook if
	TARGET_PROFILE_KERNEL.
	(ASM_OUTPUT_SPECIAL_POOL_ENTRY_P): Handle -maddr32.
	* config/rs6000/rs6000.h (TARGET_ADDR32, TARGET_SAFE_STACK,
	TARGET_PROFILE_KERNEL): Define.
	(LEGITIMATE_LO_SUM_ADDRESS_P): Handle -maddr32.
	* config/rs6000/rs6000.md (elf_high, elf_low): Allow even if
	TARGET_ADDR32.
	(elf_high64, elf_low64): New insns.

2002-12-25  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.c (rs6000_override_options): Convert to
	tartet_flags_explicit.
	* config/rs6000/rs6000.h (MASK_MULTIPLE_SET, MASK_STRING_SET): Delete.
	Compact target_flags bits.
	(TARGET_MULTIPLE_SET, TARGET_STRING_SET): Delete.
	(TARGET_SWITCHES): Delete references to *_SET flags.

2002-07-25  Richard Sandiford  <rsandifo@redhat.com>

	* toplev.h (target_flags_explicit): Declare.
	* toplev.c (target_flags_explicit): New var.
	(set_target_switch): Update target_flags_explicit.

2003-03-19  Alan Modra  <amodra@bigpond.net.au>

	* config/rs6000/rs6000.c (rs6000_stack_info): Only require a frame
	when debugging on XCOFF targets.

2003-02-26  Alan Modra  <amodra@bigpond.net.au>

	PR target/9681
	* tlink.c (scan_linker_output): Drop leading '.' from symbol names.

2003-03-22  Alan Modra  <amodra@bigpond.net.au>

	* combine.c (simplify_comparison <AND>): Use gen_int_mode.  Tidy.

2002-09-19 Dale Johannesen <dalej@apple.com>
